baml_language/crates/baml_tests/snapshots/pending_greaters_fix/baml_tests__pending_greaters_fix__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function BadParam.build_request(x: map<string, int>) -> baml.http.Request {
    baml.llm.build_request("BadParam", { "x": x })
}

function BadParam.render_prompt(x: map<string, int>) -> baml.llm.PromptAst {
    baml.llm.render_prompt("BadParam", { "x": x })
}

function BadReturnType.build_request() -> baml.http.Request {
    baml.llm.build_request("BadReturnType", {  })
}

function BadReturnType() -> map<string, int> {
    baml.llm.call_llm_function("BadReturnType", {  })
}

function BadReturnType.render_prompt() -> baml.llm.PromptAst {
    baml.llm.render_prompt("BadReturnType", {  })
}

function BadParam(x: map<string, int>) -> string {
    baml.llm.call_llm_function("BadParam", { "x": x })
}

class stream_NestedGenerics {
  nested: map<string, map<string, int>> @sap.missing({})
  simple: map<string, int> @sap.missing({})
}

class stream_MalformedClass {
  bad_field: map<string, int> @sap.missing({})
  good_field: map<string, int> @sap.missing({})
  another_field: null | string @sap.missing(null)
}

class MalformedClass {
  bad_field: map<string, int>
  good_field: map<string, int>
  another_field: string
}

class NestedGenerics {
  nested: map<string, map<string, int>>
  simple: map<string, int>
}

type stream_BadAlias = map<string, int>

type BadAlias = map<string, int>
