baml_language/crates/baml_tests/snapshots/pending_greaters_fix/baml_tests__pending_greaters_fix__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.MalformedClass {
  bad_field: map<string, int>
  good_field: map<string, int>
  another_field: string
}
class user.NestedGenerics {
  nested: map<string, map<string, int>>
  simple: map<string, int>
}
type user.BadAlias = map<string, int>
function user.BadParam(x: map<string, int>) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "BadParam", map { "x": x })
}
function user.BadParam$build_request(x: map<string, int>) -> baml.http.Request  [expr] {
  baml.llm.build_request("BadParam", map { "x": x })
}
function user.BadParam$render_prompt(x: map<string, int>) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("BadParam", map { "x": x })
}
function user.BadReturnType() -> map<string, int>  [llm] {
  baml.llm.call_llm_function(GPT4, "BadReturnType", map {  })
}
function user.BadReturnType$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("BadReturnType", map {  })
}
function user.BadReturnType$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("BadReturnType", map {  })
}
