baml_language/crates/baml_tests/snapshots/pending_greaters_fix/baml_tests__pending_greaters_fix__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.BadReturnType$render_prompt() -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.render_prompt(const "BadReturnType", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.BadReturnType$build_request() -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.build_request(const "BadReturnType", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.BadParam$render_prompt(x: map<string, int>) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: map<string, int> // x // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "x": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "BadParam", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.BadReturnType() -> map<string, int> {
    // Locals:
    let _0: map<string, int> // _0 // return
    let _1: map<void, void>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const null, const "BadReturnType", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.BadParam(x: map<string, int>) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: map<string, int> // x // param
    let _2: map<"x", map<string, int>>

    bb0: {
        _2 = { const "x": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "BadParam", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.BadParam$build_request(x: map<string, int>) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: map<string, int> // x // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "x": copy _1 };
        _0 = call const fn baml.llm.build_request(const "BadParam", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
