baml_language/crates/baml_tests/snapshots/pending_greaters_fix/baml_tests__pending_greaters_fix__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.MalformedClass {
  bad_field: map<string, int>
  good_field: map<string, int>
  another_field: string
}
class user.NestedGenerics {
  nested: map<string, map<string, int>>
  simple: map<string, int>
}
function user.BadParam(x: map<string, int>) -> string throws never {
  baml.llm.call_llm_function<T>(GPT4, "BadParam", map { "x": x }) : string
  !! 741..777: unresolved name: GPT4
}
function user.BadParam$render_prompt(x: map<string, int>) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "BadParam", map { "x": x }) : baml.llm.PromptAst
  !! 655..777: unresolved name: GPT4
}
function user.BadParam$build_request(x: map<string, int>) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "BadParam", map { "x": x }) : baml.http.Request
  !! 655..777: unresolved name: GPT4
}
function user.BadParam$parse(json: string) -> string throws never {
  baml.llm.parse<T>("BadParam", json) : string
}
function user.BadReturnType() -> map<string, int> throws never {
  baml.llm.call_llm_function<T>(GPT4, "BadReturnType", map {  }) : map<string, int>
  !! 861..897: unresolved name: GPT4
}
function user.BadReturnType$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "BadReturnType", map {  }) : baml.llm.PromptAst
  !! 777..897: unresolved name: GPT4
}
function user.BadReturnType$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "BadReturnType", map {  }) : baml.http.Request
  !! 777..897: unresolved name: GPT4
}
function user.BadReturnType$parse(json: string) -> map<string, int> throws never {
  baml.llm.parse<T>("BadReturnType", json) : map<string, int>
}
type user.BadAlias = map<string, int>
class user.MalformedClass$stream {
  bad_field: map<string, int>
  good_field: map<string, int>
  another_field: null | string
}
class user.NestedGenerics$stream {
  nested: map<string, map<string, int>>
  simple: map<string, int>
}
function user.BadParam$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream throws never {
  baml.llm.__make_stream(sse, "BadParam", GPT4) : unknown
  !! 655..777: unresolved name: GPT4
}
function user.BadReturnType$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream throws never {
  baml.llm.__make_stream(sse, "BadReturnType", GPT4) : unknown
  !! 777..897: unresolved name: GPT4
}
type user.BadAlias$stream = map<string, int>
