baml_language/crates/baml_tests/snapshots/pending_greaters_fix/baml_tests__pending_greaters_fix__06_codegen.snap
---
source: target/debug/build/baml_tests-7d70f780e0809cb8/out/generated_tests.rs
expression: output
---
=== BYTECODE ===
Functions: 5
Objects: 70
Globals: 53

Function BadParam (arity: 1, kind: Bytecode):
     0   LOAD_GLOBAL 50   (<fn baml.llm.call_llm_function>)
     1   LOAD_CONST 0     ("BadParam")
     2   LOAD_VAR 1       (x)
     3   LOAD_CONST 1     ("x")
     4   ALLOC_MAP 1      
     5   CALL 2           
     6   RETURN           

Function BadReturnType (arity: 0, kind: Bytecode):
     0   LOAD_GLOBAL 50   (<fn baml.llm.call_llm_function>)
     1   LOAD_CONST 0     ("BadReturnType")
     2   ALLOC_MAP 0      
     3   CALL 2           
     4   RETURN           

Function baml.llm.build_request (arity: 2, kind: Bytecode):
     0    INIT_LOCALS 4       
     1    LOAD_GLOBAL 44      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 47      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 46      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
     23   AWAIT               
     24   STORE_VAR 6         (specialized_prompt)
     25   LOAD_GLOBAL 36      (<fn baml.llm.PrimitiveClient.build_request>)
     26   LOAD_VAR 4          (primitive_client)
     27   LOAD_VAR 6          (specialized_prompt)
     28   DISPATCH_FUTURE 2   
     29   AWAIT               
     30   RETURN              

Function baml.llm.call_llm_function (arity: 2, kind: Bytecode):
     0    INIT_LOCALS 8       
     1    LOAD_GLOBAL 44      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 47      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 46      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
     23   AWAIT               
     24   STORE_VAR 6         (specialized_prompt)
     25   LOAD_GLOBAL 36      (<fn baml.llm.PrimitiveClient.build_request>)
     26   LOAD_VAR 4          (primitive_client)
     27   LOAD_VAR 6          (specialized_prompt)
     28   DISPATCH_FUTURE 2   
     29   AWAIT               
     30   STORE_VAR 7         (http_request)
     31   LOAD_GLOBAL 33      (<fn baml.http.send>)
     32   LOAD_VAR 7          (http_request)
     33   DISPATCH_FUTURE 1   
     34   AWAIT               
     35   STORE_VAR 8         (http_response)
     36   LOAD_GLOBAL 30      (<fn baml.http.Response.text>)
     37   LOAD_VAR 8          (http_response)
     38   DISPATCH_FUTURE 1   
     39   AWAIT               
     40   STORE_VAR 9         (result)
     41   LOAD_GLOBAL 41      (<fn baml.llm.get_return_type>)
     42   LOAD_VAR 1          (function_name)
     43   DISPATCH_FUTURE 1   
     44   AWAIT               
     45   STORE_VAR 10        (return_type)
     46   LOAD_GLOBAL 37      (<fn baml.llm.PrimitiveClient.parse>)
     47   LOAD_VAR 4          (primitive_client)
     48   LOAD_VAR 9          (result)
     49   LOAD_VAR 10         (return_type)
     50   DISPATCH_FUTURE 3   
     51   AWAIT               
     52   RETURN              

Function baml.llm.render_prompt (arity: 2, kind: Bytecode):
     0    INIT_LOCALS 3       
     1    LOAD_GLOBAL 44      (<fn baml.llm.get_jinja_template>)
     2    LOAD_VAR 1          (function_name)
     3    DISPATCH_FUTURE 1   
     4    AWAIT               
     5    STORE_VAR 3         (jinja_string)
     6    LOAD_GLOBAL 47      (<fn baml.llm.get_client_function>)
     7    LOAD_VAR 1          (function_name)
     8    DISPATCH_FUTURE 1   
     9    AWAIT               
     10   CALL 0              
     11   STORE_VAR 4         (primitive_client)
     12   LOAD_GLOBAL 46      (<fn baml.llm.PrimitiveClient.render_prompt>)
     13   LOAD_VAR 4          (primitive_client)
     14   LOAD_VAR 3          (jinja_string)
     15   LOAD_VAR 2          (args)
     16   DISPATCH_FUTURE 3   
     17   AWAIT               
     18   STORE_VAR 5         (prompt)
     19   LOAD_GLOBAL 35      (<fn baml.llm.PrimitiveClient.specialize_prompt>)
     20   LOAD_VAR 4          (primitive_client)
     21   LOAD_VAR 5          (prompt)
     22   DISPATCH_FUTURE 2   
     23   AWAIT               
     24   RETURN
